fix small layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -479,5 +479,12 @@ a.social:hover {
 
 	}
 
+	* {
+		font-size: 0.9em;
+	}
+	.card {
+		max-width: 300px;
+		margin: auto;
+	}
 }
 
